Adds basic highlighting and clearing highlighting of selected launch list item.

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,7 @@ html, body {
 .launch-list-item {
     border: 1px solid black;
 }
+
+.launch-list-item-selected {
+    background-color: lightgrey;
+}
