--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 }
 
 html, body {
-    height:100%
+    height:100%;
+    /* overflow-y: hidden; */
 }
 
 /*  If this idea doesn't pan out
@@ -17,6 +18,8 @@ html, body {
 #js-map-outer {
     min-height: var(--halfHeight);
     position: fixed;
+    /* position: absolute; */
+    top: 0;
     /* min-height: 50%; */
     width: 100%;
     z-index: 1;
@@ -28,11 +31,13 @@ html, body {
     width: 100%;
 }
 
-.container {
+/*.container {*/
+#js-launch-list {
     min-height: var(--halfHeight);
     position: absolute;
     top: var(--halfHeight);
-    overflow: hidden;
+    /* overflow-y: scroll; */
+    /* overflow: hidden; */
 }
 
 .launch-list-item {
