--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html, body {
     top: 0;
     /* min-height: 50%; */
     width: 100%;
+
     z-index: 1;
 }
 
@@ -36,14 +37,23 @@ html, body {
     min-height: var(--halfHeight);
     position: absolute;
     top: var(--halfHeight);
+    /* margin: 5px 0 0 0; */
     /* overflow-y: scroll; */
     /* overflow: hidden; */
 }
 
 .launch-list-item {
+    width: 80%;
+    margin: 5px auto;
     border: 1px solid black;
 }
 
 .launch-list-item-selected {
     background-color: lightgrey;
+}
+
+@media screen and (max-width: 420px) {
+    .launch-list-item {
+        width: 95%;
+    }
 }
