--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ p {
 }
 
 @media screen and (max-width: 420px) {
+    
     .launch-list-item {
         width: 95%;
     }
@@ -146,6 +147,10 @@ p {
         margin: 10px auto;
         padding: 20px;
     }
+}
+
+
+@media screen and (max-width: 1024px) {
 
     .rocket-image {
         display: none;
@@ -153,6 +158,7 @@ p {
 }
 
 @media screen and (max-width: 1500px) {
+    
     .launch-list-item h1 {
         line-height: 2.5rem;
     }
